# tg-open-ai-comments-bot

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: ai.py  config.py  main.py  msg_storage.py
